--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site
 name: "NCC Fam"
 title: "IIT Bombay"
-description: "Made with :heart: for NCC fam"
+description: "Made with &#9829; for NCC fam"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
 baseurl: ''
