--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: "NCC Fam"
+name: "NCC IIT Bombay"
 title: "IIT Bombay"
 description: "Made with &#9829; for NCC fam"
 logo: 'assets/images/logo.png'
@@ -13,23 +13,13 @@ permalink: /:title/
 
 # Authors
 authors:
-  sal:
-    name: Sal
-    display_name: Sal
-    gravatar: e56154546cf4be74e393c62d1ae9f9d4
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "Author of Mediumish, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
-  john:
-    name: John
-    display_name: John    
+  manan:
+    name: Manan Garg
+    display_name: Manan Garg
+    email: manangrg4@gmail.com
     avatar: 'assets/images/avatar.png'
-    gravatar: b1cc14991db7a456fcd761680bbc8f81
-    email: wowthemesnet@gmail.com
-    web: https://www.wowthemes.net
-    twitter: https://twitter.com/wowthemesnet
-    description: "This is the author box. Write a short description of the author here. You are currently previewing Mediumish demo, a Jekyll template compatible with Github pages."
+    description: "Editor of this magazine and the Former media and Publicity Secretary of NCC."
+
 
 # Plugins
 plugins:
