--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ authors:
     name: Manan Garg
     display_name: Manan Garg
     email: manangrg4@gmail.com
-    avatar: 'assets/images/avatar.png'
+    avatar: 'assets/images/avatari.png'
     description: "Editor of this magazine and the Former media and Publicity Secretary of NCC."
 
 
